# birdbot

./: Cargo.toml
src/: hm.rs  main.rs  skullgirls.rs
