[package]
name = "birdbot"
version = "0.1.0"
authors = ["Alex Ford <gordion42@gmail.com>"]

[dependencies]
num-bigint = "0.2.2"
serde_json = "1.0.6"
serde = "1.0"
serde_derive = "1.0"
reqwest = "0.9"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.0"
nix = "0.10.0"
regex = "1"
rand = "0.5"
env_logger = "0.5.10"
log = "0.4.0"
typemap = "0.3.3"
postgres = "0.15.2"
postgres-derive = "0.3"
serenity = "0.7"

[dependencies.openweather]
version = "0.0.2"
git = "https://github.com/thePalindrome/openweather"
